feat: switch to temurin jre